# FastApi-pet

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  views.py
migrations/: env.py
src/: __init__.py  __main__.py
src/api/v1/auth/: utils.py
src/api/v1/core/: settings.py
src/api/v1/database/: __init__.py  base.py
src/api/v1/database/models/: __init__.py  order.py  photo.py  tour.py  user.py
src/api/v1/handlers/: __init__.py
src/api/v1/handlers/admin/: __init__.py  app.py  shemas.py  views.py
src/api/v1/handlers/user/: __init__.py  app.py  shemas.py  views.py
src/api/v1/middlewares/: __init__.py  is_admin.py
src/core/: __init__.py  settings.py
src/database/: base.py
src/database/models/: __init__.py  user.py
src/handlers/: __init__.py
src/handlers/admin/: __init__.py  router.py  test.py
